# verbiste-rust

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  workspace.code-workspace
data/: verbs-it.xml
frontend/: LICENSE  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  Conjugation.jsx  Empty.jsx  Search.jsx  SearchInput.jsx  data.js  empty.test.js  index.css  main.jsx  model.js  model.test.js
frontend/src/testdata/: aimer.json  avoir.json  etre.json  finir.json  index.js
public/: index.html
public/assets/: index-Bch4Eu_t.css  index-CEXJMQqZ.js
server/: Cargo.toml
server/src/: handlers.rs  main.rs
src/: handlers.rs  main.rs  template.rs  verbs.rs
