[package]
edition = "2024"
name = "verbiste-rust"
version = "0.1.0"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
quick-xml = {version = "0.31", features = ["serialize"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
warp = {version = "0.4", features = ["server"]}
