[package]
edition = "2024"
name = "verbiste-rust"
version = "0.1.0"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
deunicode = "1.4"
log = "0.4"
mime_guess = "2.0"
pretty_env_logger = "0.5"
quick-xml = {version = "0.31", features = ["serialize"]}
rust-embed = "8.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
warp = {version = "0.4", features = ["server"]}
percent-encoding = "2.3"
